[project]
name = "siliconflow-mcp"
version = "0.1.0"
description = "High-quality SiliconFlow Image Generation MCP Server"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["mcp", "siliconflow", "image-generation", "ai", "flux", "qwen"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
siliconflow-mcp = "siliconflow_mcp.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

